--- a/src/app/grid/grid-user-edit/grid-user-edit.component.html
+++ b/src/app/grid/grid-user-edit/grid-user-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row" style="justify-content: center">
   <div class="col-xs-12">
-    <form [formGroup]="userForm" (submit)="onSubmit()">
+    <form *ngIf="userForm" [formGroup]="userForm" (submit)="onSubmit()">
       <div class="row">
         <div class="col-xs-12 ">
           <div class="form-group">
